--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "6.4",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
 		"@vitejs/plugin-react": "^3.1.0",
